 Equation now always displays latex output
 Moved non-template function definitions from linearaction.h to linearaction.cpp to prevent multiple definitions
 Added some missing #include directives.
 Minor fixes for compatibility with CoCoALib 0.99539
 Class Manifold can now compute d of constant scalars
 AbstractLieSubgroup now correctly simplifies roots when checking that d^2=0
 Updated patches for GiNaC 1.6.7
Changed:
 Parser code rewritten using Spirit X3.
 Added ad hoc exception ddNotZeroException
 Variable name parsing replaced by class Name.
 Can no longer construct Lambda1<V> from V (or DifferentialOneForm from VectorField)
 AbstractLieGroup is now a template, and supports parameters
 Minor change in latex multi-line output.
 NormalForm now also collects coefficients
 Functions renamed according to a naming convention.
 Manifold::Check_ddZero now accepts a simplifier as a parameter
 Code rewritten using C++17
 GiNaC is now shipped inside the package rather than downloaded by a script 
Added:
 Classes PseudoRiemannianStructure and PseudoLeviCivita
 AbstractLieGroup with parameters
 Classes pqStructure and CoherentSplitting that enable computations with "coherent splittings"
 Adjoint representation
 Added a second constructor to AbstractLieSubgroup
 Stream manipulator OmitArgument for a nicer output of functions of a single variable and their derivatives
 Stream manipulator Label to print vectors of equations of the form x_1=? , ... , x_n=?
 Simplifiers
 
Version 0.4.0
Fixed:
 Improved registration code to avoid static initialization race conditions.
 Updated code for compatibility with GiNaC 1.8.3.
 Minor fixes for compatibility with CoCoaLib 0.99800.
Changed:
 Switched to cmake.
 Reorganized files in directories. This breaks compatibility with older versions, hence the increase in minor version.
Removed:
 Dictionary example. This should have been a separate program from the beginning.